src/components/style.scss
:local {
  .container {
    display: flex;
    flex-direction: column;
    background-color: #f9f9f9;
    font-family: "Open Sans", sans-serif;
  }

  .upperContainer {
    border-bottom: 1px solid #b4b4b4;
  }

  .lowerContainer {
    display: flex;
    max-height: calc(100vh - 103px);
  }

  .leftPane {
    display: flex;
    flex-direction: column;
    // flex: 5;
    width: 62.5%;
    border-right: 1px solid #b4b4b4;
    // overflow-y: scroll;

    .leftUpper {
      position: relative;
      height: 100%;
      overflow: scroll;
    }

    .leftLower {
      height: 2.5rem;
      width: 100%;
      // position: fixed;
      // bottom: 0;
    }
  }

  .rightPane {
    // flex: 3;
    width: 37.5%;
  }

  .pathTreeContainer {
    border-top: 1px solid #b4b4b4;
    // TODO: calculate exact max-weight
    max-height: 100%;
    overflow-y: scroll;
  }
}

:global {
  .noSelect {
    -webkit-touch-callout: none;
    /* iOS Safari */
    -webkit-user-select: none;
    /* Safari */
    -khtml-user-select: none;
    /* Konqueror HTML */
    -moz-user-select: none;
    /* Old versions of Firefox */
    -ms-user-select: none;
    /* Internet Explorer/Edge */
    user-select: none;
    /* Non-prefixed version, currently
                                  supported by Chrome, Opera and Firefox */
  }
}

